--- a/index.html
+++ b/index.html
@@ -97,14 +97,20 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active fw-semibold text-success" href="index.html" aria-current="page">Home</a>
+          <a class="nav-link active fw-semibold text-success" href="index.html" aria-current="page">
+            <i class="bi bi-house"></i> Home</a>
         </li>
-        <li id="btnTurnosMob" class="nav-item"><a class="nav-link text-primary" href="sacar-turno.html">Turnos</a></li>
-        <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
-        <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
-        <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
-        <li id="adminMedMob" class="nav-item d-none"><a class="nav-link text-primary" href="admin-medicos.html">Panel
-            Admin</a></li>
+        <li id="btnTurnosMob" class="nav-item"><a class="nav-link text-primary" href="sacar-turno.html">
+          <i class="bi bi-calendar2-event"></i> Turnos</a>
+        </li>
+        <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">
+          <i class="bi bi-buildings"></i> Institucional</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">
+          <i class="bi bi-person-lines-fill"></i> Contacto</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="faq.html">
+          <i class="bi bi-question-lg"></i> FAQ</a></li>
+        <li id="adminMedMob" class="nav-item d-none"><a class="nav-link text-primary" href="admin-medicos.html">
+          <i class="bi bi-gear"></i> Panel Admin</a></li>
         <li class="nav-item d-flex justify-content-center" id="btnInicioMob">
           <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#loginModal">
             Iniciar sesión
