--- a/sacar-turno.html
+++ b/sacar-turno.html
@@ -84,10 +84,14 @@
         </div>
         <div class="offcanvas-body">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
-                <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link text-primary" href="index.html">
+                    <i class="bi bi-house"></i> Home</a></li>
+                <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">
+                    <i class="bi bi-buildings"></i> Institucional</a></li>
+                <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">
+                    <i class="bi bi-person-lines-fill"></i> Contacto</a></li>
+                <li class="nav-item"><a class="nav-link text-primary" href="faq.html">
+                    <i class="bi bi-question-lg"></i> FAQ</a></li>
             </ul>
         </div>
     </div>
@@ -95,66 +99,65 @@
     <!-- ======================== CONTENIDO ======================== -->
     <main class="container flex-grow-1 py-3">
         <h2 class="h3 mb-3">Reservá tu turno</h2>
-
-        <div class="row g-3">
-            <!--Nombre-->
-            <div class="col-md-4">
-                <label class="form-label" for="nombre">Nombre</label>
-                <input id="nombre" type="text" class="form-control mb-2" placeholder="Ingrese su Nombre" required>
-            </div>
-
-            <!--Apellido-->
-            <div class="col-md-4">
-                <label class="form-label" for="apellido">Apellido</label>
-                <input id="apellido" type="text" class="form-control mb-2" placeholder="Ingrese su Apellido" required>
-            </div>
-
-            <!-- Especialidad -->
-            <div class="col-md-4">
-                <label class="form-label" for="selectEspecialidad">Especialidad</label>
-                <select id="selectEspecialidad" class="form-select">
-                    <option value="">Todas</option>
-                </select>
-            </div>
-
-            <!-- Médico -->
-            <div class="col-md-4">
-                <label class="form-label" for="selectMedico">Médico</label>
-                <select id="selectMedico" class="form-select"></select>
-            </div>
-
-            <!-- Obra social -->
-            <div class="col-md-4">
-                <label class="form-label" for="selectObra">Obra social</label>
-                <select id="selectObra" class="form-select"></select>
-                <div id="infoDescuento" class="small text-body-secondary mt-1"></div>
-            </div>
-
-            <!-- Fecha -->
-            <div class="col-md-4">
-                <label class="form-label" for="inputFecha">Fecha</label>
-                <input id="inputFecha" type="date" class="form-control" />
-            </div>
-        </div>
-
-        <hr />
-
-        <!-- Horas -->
-        <div class="row g-2" id="contenedorHoras"></div>
-
-        <!-- Resumen -->
-        <div id="resumen" class="mt-3" style="display:none">
-            <div class="alert alert-info">
-                <div><strong>Médico:</strong> <span id="resumenMedico"></span></div>
-                <div><strong>Fecha:</strong> <span id="resumenFecha"></span></div>
-                <div><strong>Hora:</strong> <span id="resumenHora"></span></div>
-                <div><strong>Obra social:</strong> <span id="resumenObra"></span> <span id="resumenDescuento"></span>
+        <form id="formTurno">
+            <div class="row g-3">
+                <!--Nombre-->
+                <div class="col-md-4">
+                    <label class="form-label" for="nombre">Nombre</label>
+                    <input id="nombre" type="text" class="form-control mb-2" placeholder="Ingrese su Nombre" required>
                 </div>
-                <div><strong>Monto a pagar:</strong> $ <span id="resumenMonto"></span></div>
-            </div>
-            <button id="btnConfirmar" class="btn btn-success">Confirmar turno</button>
-        </div>
 
+                <!--Apellido-->
+                <div class="col-md-4">
+                    <label class="form-label" for="apellido">Apellido</label>
+                    <input id="apellido" type="text" class="form-control mb-2" placeholder="Ingrese su Apellido" required>
+                </div>
+
+                <!-- Especialidad -->
+                <div class="col-md-4">
+                    <label class="form-label" for="selectEspecialidad">Especialidad</label>
+                    <select id="selectEspecialidad" class="form-select">
+                        <option value="">Todas</option>
+                    </select>
+                </div>
+
+                <!-- Médico -->
+                <div class="col-md-4">
+                    <label class="form-label" for="selectMedico">Médico</label>
+                    <select id="selectMedico" class="form-select"></select>
+                </div>
+
+                <!-- Obra social -->
+                <div class="col-md-4">
+                    <label class="form-label" for="selectObra">Obra social</label>
+                    <select id="selectObra" class="form-select"></select>
+                    <div id="infoDescuento" class="small text-body-secondary mt-1"></div>
+                </div>
+
+                <!-- Fecha -->
+                <div class="col-md-4">
+                    <label class="form-label" for="inputFecha">Fecha</label>
+                    <input id="inputFecha" type="date" class="form-control" />
+                </div>
+            </div>
+            <hr />
+
+            <!-- Horas -->
+            <div class="row g-2" id="contenedorHoras"></div>
+
+            <!-- Resumen -->
+            <div id="resumen" class="mt-3" style="display:none">
+                <div class="alert alert-info">
+                    <div><strong>Médico:</strong> <span id="resumenMedico"></span></div>
+                    <div><strong>Fecha:</strong> <span id="resumenFecha"></span></div>
+                    <div><strong>Hora:</strong> <span id="resumenHora"></span></div>
+                    <div><strong>Obra social:</strong> <span id="resumenObra"></span> <span id="resumenDescuento"></span>
+                    </div>
+                    <div><strong>Monto a pagar:</strong> $ <span id="resumenMonto"></span></div>
+                </div>
+                <button id="btnConfirmar" type="submit" class="btn btn-success">Confirmar turno</button>
+            </div>
+        </form>
         <!-- Agenda del médico (vista texto) -->
         <section class="mt-3">
             <h2 class="h6 mb-2">Agenda del médico</h2>
